# Prometheus

./: .gitignore  README.md  approach.md  detail.md  gemini.md  insight.md  junk_audit.md  launch_kit.md.resolved  og-gen.html  prometheus.md
.github/: FUNDING.yml
.github/workflows/: release.yml
prometheus-tui/: Cargo.toml  install.bat  install.sh  website-snippet.html
prometheus-tui/src/: license.rs  main.rs  main.rs.backup
prometheus-ui/: package-lock.json  package.json
prometheus-ui/app/: globals.css  layout.tsx  page.tsx
prometheus-ui/app/api/free-license/: route.ts
prometheus-ui/app/api/payment/create-order/: route.ts
prometheus-ui/app/api/payment/verify/: route.ts
prometheus-ui/app/api/verify-license/: route.ts
prometheus-ui/app/contact/: page.tsx
prometheus-ui/app/privacy/: page.tsx
prometheus-ui/app/refund/: page.tsx
prometheus-ui/app/terms/: page.tsx
prometheus-ui/components/: core-engines.tsx  footer-section.tsx  free-license-modal.tsx  header.tsx  hero-section.tsx  interactive-demo.tsx  payment-modal.tsx  pricing-section.tsx  problem-strip.tsx
prometheus-ui/public/: install.ps1  install.sh
