[package]
name = "prometheus"
version = "1.1.0"
edition = "2021"
description = "God-Mode System Cleaner - Hunt dev junk in the darkest corners"
authors = ["Aryan Sharma"]

[[bin]]
name = "prometheus"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2.4"
fs_extra = "1.3"
trash = "5.2"
dirs = "6.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
ctrlc = "3.4"
md5 = "0.7"
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
